packages/typ/tests/fixtures/diagnostics/0525_modules_outer_hidden_annotation_mismatch_09.ml.infer.expected
File "0525_modules_outer_hidden_annotation_mismatch_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0525_modules_outer_hidden_annotation_mismatch_09 is not a valid module name.

File "0525_modules_outer_hidden_annotation_mismatch_09.ml", line 15, characters 14-33:
15 | let _ : int = Outer_iota.Hidden.x
                   ^^^^^^^^^^^^^^^^^^^
Error: The value Outer_iota.Hidden.x has type Outer_iota.Hidden.t
       but an expression was expected of type int
